--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   djangoserver:
+    container_name: backend
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     ports:
