--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,13 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
+    depends_on:
+      - redis
+
+
+
+  redis:
+    image: "redis:alpine"
+    container_name: redis
 
       
